--- a/places/paris.html
+++ b/places/paris.html
@@ -98,6 +98,7 @@
           <md-card>
       <md-card-header>
         <md-card-header-text>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Paris_montage_2013.jpg/270px-Paris_montage_2013.jpg">
           <div class="md-title">Paris ⚝</div>
           <div class="md-subhead">Paris, the capital of France, is an important European city and a world center for art, fashion, gastronomy and culture.</div>
           <br>
@@ -108,7 +109,8 @@ Spanning numerous monuments and because of its considerable political and econom
 Paris is the economic and commercial capital of France, where the stock exchange and finance businesses are concentrated. The density of its rail, road and airport structure - a hub of the French and European air network - makes it a point of convergence for international transport. The city is home to two international airports: Paris-Charles de Gaulle Airport, the second busiest airport in Europe, and Paris-Orly Airport. Opened in 1900, the city's metro, the Paris Metro, serves 5.23 million passengers daily; it is the second busiest metro system in Europe, surpassed by the Moscow metro. [11] Gare du Nord is the 24th busiest railway station in the world, but the first located outside Japan, with 262 million passengers in 2015.
 <br>
 In 2018, Paris received 16.8 million tourists, making it the eighth most visited city in the world that year, as well as the second city in Europe, after London. The Paris Saint-Germain football club and the Stade Français rugby club are based in Paris. The 81,000-seat Stade de France, built for the 1998 FIFA World Cup, is located in the north of the city, in the neighboring commune of Saint-Denis. Paris organizes the Grand Slam tennis tournament annually. It hosted the 1900 and 1924 Summer Olympics, and is expected to host the 2024 Olympics. Paris was also the host city for the FIFA World Cups of 1938 and 1998, the Rugby Union World Cup of 2007 and the European Football Championship of 1960, 1984 and 2016.The Tour de France road cycling competition ends in Paris every July.
-
+<br>
+          <a href="https://wikipedia.org/wiki/Paris">Wikipédia</a>
 
 
         <a 
